# voicevox_core-rs

./: Cargo.toml  LICENSE  README.md
crates/lib/: Cargo.toml
crates/lib/src/: info.rs  lib.rs  models.rs  open_jtalk.rs  result.rs  synthesizer.rs  user_dict.rs  voice_model.rs
crates/lib/tests/: main.rs
crates/sys/: Cargo.toml  build.rs
crates/sys/src/: generated.rs  lib.rs
crates/test_resources/: Cargo.toml  build.rs
crates/test_resources/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
