[workspace]
members = ["crates/sys", "crates/lib", "crates/test_resources", "example"]
resolver = "2"

[workspace.dependencies]
voicevox_core-sys = { path = "crates/sys" }
voicevox_core-rs = { path = "crates/lib" }
test_resources = { path = "crates/test_resources" }

anyhow = "1.0.79"
duplicate = "1.0.0"
indexmap = { version = "2.2.3", features = ["serde"] }
thiserror = "1.0.56"
semver = "1.0.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
ureq = "2.9.5"
zip-extract = "0.1.3"
flate2 = "1.0.28"
tar = "0.4.40"
uuid = { version = "1.7.0", features = ["serde"] }
