[package]
name = "voicevox_core-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
duplicate.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
voicevox_core-sys.workspace = true

[dev-dependencies]
test_resources.workspace = true
